[package]
name = "playground"
version = "0.2.0"
authors = ["Daniel Brotsky <dev@brotsky.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.5"
tokio = { version = "~1.0.3", features = ["full"] }
hyper = { version = "~0.14.2", features = ["full"] }
hyper-proxy = "~0.9.1"
hyper-tls = "~0.5"
native-tls = "~0.2.7"
tokio-native-tls = "~0.3"
futures = "0.3.15"
headers = "0.3.4"
#sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros", "sqlite" ] }
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0.59"
#url = "2.2.0"
#keyring = "0.10.1"
#base64 = "0.13.0"