[package]
name = "playground"
version = "0.2.0"
authors = ["Daniel Brotsky <dev@brotsky.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
chrono = "0.4"
eyre = "0.6"
keyring = "1"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
sqlx = { version = "0.6", default-features = false, features = [ "runtime-tokio-native-tls", "sqlite" ] }
tokio = { version = "1", features = ["full"] }
toml = "0.5"
url = "2"
warp = "0.3"
